--- a/index.html
+++ b/index.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>vente en ligne</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Style.css'>
     <script src='main.js'></script>
-    <link rel="stylesheet" href="Style.css">
 </head>
-<body>     
- <h1>
-    Dasmoto's Arts & Crafts
- </h1>   
- <p>
-    Brushes
-</p>
- <img src=imge5.jpeg"
- alt="image pinceau" width="50%">
-
-<h3>Hacksaw Brushes</h3>
-Made of the highest oak, Hacksaw Brushes are know for their weight and ability to hold paint in large. Available in different size.
-Starting at $3.00/brush.
-</div>
-<h5>
-    Frames 
-</h5>
-<img src="frames.jpeg"
- alt="image pinceau" width="50%">
-Art frames (assorted)
-assorted frames made of different,including MDF,birchwood, and PDF.Select frames can be sanded painted
- according to your needs. Starting at $2.00/ frame.
-<h6>
-    Paint
-</h6>
-Clean Finnish Paint
-imported paint from Filand. over 256 colors available in-store, varying in quantity
-
-</body
+<body>
+    <h1>Dasmoto's Arts & Crafts</h1>
+    <section class="main">
+      <h2 class="Brushes">Brushes</h2>
+      <figure class="img-div">
+        <img class="image"
+           src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt="Brushes">
+           <p>hacksaw Brushe</p>
+           <figcaption class="img-caption">Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <mark>Starting at $3.00 / brush.</mark> 
+</figcaption>
+      </figure>
+    </section> 
+    <section class="main"> 
+      <h3 class="Frames">Frames</h3>
+      <figure class="img-div">
+        <img class="image"
+           src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg" alt="Frames">
+           <p>Art Frames (assorted)</p>
+           <figcaption class="img-caption">Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <mark>Starting at $2.00 / frame.</mark></figcaption>
+        </figure>
+    </section>
+    <section class="main">
+      <h4 class="Paint">Paint</h4>
+      <figure class="img-div">
+        <img class="image"
+           src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg" alt="paint">
+           <p>Clean Finnish Paint</p>
+           <figcaption class="img-caption">Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<mark>Starting at $5.00 / tube.</mark>
+        </figcaption>
+    </figure>
+    </section>   
+</body>
 </html>
